# arc-plugin-briefbot

./: CLAUDE.md  README.md  pyproject.toml
_design/: 0001-briefbot-research-corpus.md
src/arc_plugin_briefbot/: __init__.py  dal.py  plugin.py
src/arc_plugin_briefbot/tools/: briefbot_item.py  briefbot_search.py  briefbot_trending.py
tests/: conftest.py  test_dal.py  test_plugin.py  test_tool.py  test_tools.py
