[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "arc-plugin-briefbot"
version = "0.1.0"
description = "arc plugin: tools for searching the local Briefbot research corpus."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [{ name = "migo" }]
keywords = ["arc", "agent", "plugin", "briefbot", "research"]

# No runtime deps beyond stdlib — sqlite3 is built in. arc itself is provided
# by the host process at runtime (we import from `arc.plugin_api`), so it's
# not declared here either.
dependencies = []

[project.optional-dependencies]
dev = [
  "pytest>=8.0",
  "pytest-cov>=5.0",
  "ruff>=0.5",
]

[project.entry-points."arc.plugins"]
briefbot = "arc_plugin_briefbot.plugin:build"

[tool.hatch.build.targets.wheel]
packages = ["src/arc_plugin_briefbot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra -q"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
